Lots more fixes to make it more readable

--- a/public/css/fonts.css
+++ b/public/css/fonts.css
@@ -97,3 +97,11 @@
 	font-variation-settings:
 		"wdth" 100;
 }
+
+
+.oswald {
+	font-family: "Oswald", sans-serif;
+	font-optical-sizing: auto;
+	font-weight: 300;
+	font-style: normal;
+}
