--- a/public/css/global-styles.css
+++ b/public/css/global-styles.css
@@ -2,10 +2,10 @@
 
 :root {
 	--primaryFontFamilies: "Merriweather", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-	--attentionFontStack: "Bebas Neue", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+	--attentionFontStack: "Oswald", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 	--background: #232529;
 	--foreground: #dedede;
-	--attention: #e82ea7;
+	--attention: #F5DE8C;
 	--headerHeight: 60px;
 }
 
@@ -14,7 +14,6 @@ body {
 	background-color: var(--background);
 	color: var(--foreground);
 	font-family: var(--primaryFontFamilies);
-	font-size: 1em;
 	line-height: 1.6em;
 	padding: 0;
 	margin: 0;
@@ -56,19 +55,22 @@ img {
 }
 
 pre {
-	max-width: 100vw;
+	background: rgba(0, 0, 0, .35);
+	border-radius: 5px;
+	max-width: 100%;
 
 	code {
 		width: 98%;
 		padding: 1em;
+		background-color: transparent;
 	}
 }
 
 code {
-	background: rgba(0, 0, 0, .35);
-	border-radius: 5px;
 	padding: 0 .5em;
 	display: inline-block;
+	background: rgba(0, 0, 0, .35);
+	border-radius: 5px;
 }
 
 h1,
@@ -88,7 +90,7 @@ h6 {
 	&:before {
 		content: "#";
 		color: var(--attention);
-		margin-right: 0.5em;
+		margin-right: 0.25rem;
 	}
 }
 
@@ -156,6 +158,12 @@ pre {
 	max-width: 100%;
 	overflow: auto;
 }
+
+time {
+	opacity: 0.6;
+	font-size: 0.9em;
+}
+
 
 @media (min-width: 320px) and (max-width: 500px) {
 	main {
@@ -235,7 +243,7 @@ nav.site-navigation {
 			flex-grow: 1;
 			font-weight: 700;
 			font-size: 1.2em;
-			font-family: var(--attentionFontStack);
+			font-family: "Bebas Neue", sans-serif;
 		}
 	}
 }
